Fix off-screen sidebar

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,8 @@
-#root, main, .app, .map {
+html, body, #root, main, .app, .map {
 	width: 100%;
 	height: 100%;
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 /* HEADER */
 
@@ -57,11 +59,12 @@
 	height: 68vh;
 	overflow-y: auto;
 	transform: translateX(500px);
-	transition: all 0.3s ease;
+	visibility: hidden;
 }
 .show {
+	visibility: visible;
 	transform: translateX(0);
-	transition: all 0.3s ease;
+	transition: transform 0.3s ease;
 }
 .form {
 	display: block;
